thy/OpenFlow/Examples/RFC2544/iptables-save
# Hand-written from rfc2544
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A FORWARD -s 192.18.1.1 -d 192.18.101.1 -j DROP
-A FORWARD -s 192.18.2.2 -d 192.18.102.2 -j DROP
-A FORWARD -s 192.18.3.3 -d 192.18.103.3 -j DROP
-A FORWARD -s 192.18.4.4 -d 192.18.104.4 -j DROP
-A FORWARD -s 192.18.5.5 -d 192.18.105.5 -j DROP
-A FORWARD -s 192.18.6.6 -d 192.18.106.6 -j DROP
-A FORWARD -s 192.18.7.7 -d 192.18.107.7 -j DROP
-A FORWARD -s 192.18.8.8 -d 192.18.108.8 -j DROP
-A FORWARD -s 192.18.9.9 -d 192.18.109.9 -j DROP
-A FORWARD -s 192.18.10.10 -d 192.18.110.10 -j DROP
-A FORWARD -s 192.18.11.11 -d 192.18.111.11 -j DROP
-A FORWARD -s 192.18.12.12 -d 192.18.112.12 -j DROP
-A FORWARD -s 192.19.1.2 -d 192.19.65.1 -j ACCEPT
-A FORWARD -s 192.18.13.13 -d 192.18.113.13 -j DROP
-A FORWARD -s 192.18.14.14 -d 192.18.114.14 -j DROP
-A FORWARD -s 192.18.15.15 -d 192.18.115.15 -j DROP
-A FORWARD -s 192.18.16.16 -d 192.18.116.16 -j DROP
-A FORWARD -s 192.18.17.17 -d 192.18.117.17 -j DROP
-A FORWARD -s 192.18.18.18 -d 192.18.118.18 -j DROP
-A FORWARD -s 192.18.19.19 -d 192.18.119.19 -j DROP
-A FORWARD -s 192.18.20.20 -d 192.18.120.20 -j DROP
-A FORWARD -s 192.18.21.21 -d 192.18.121.21 -j DROP
-A FORWARD -s 192.18.22.22 -d 192.18.122.22 -j DROP
-A FORWARD -s 192.18.23.23 -d 192.18.123.23 -j DROP
-A FORWARD -s 192.18.24.24 -d 192.18.124.24 -j DROP
COMMIT
# Completed on Mon Mar 7 19:29:19 2016
